# django_drf

./: .gitignore  pyproject.toml
app_edu/: admin.py  apps.py  models.py  serializers.py  urls.py
app_edu/migrations/: 0001_initial.py
app_edu/views/: __init__.py  course_view.py  lesson_view.py
app_users/: admin.py  models.py  serializers.py  urls.py  views.py
app_users/migrations/: 0001_initial.py  0002_user_avatar_user_city_name_user_phone.py
config/: settings.py  urls.py
utils/: hash_storage.py
